--- a/AspMVCDatatableServerSidePaging/Views/Shared/_Layout.cshtml
+++ b/AspMVCDatatableServerSidePaging/Views/Shared/_Layout.cshtml
@@ -179,7 +179,7 @@
             <!-- Brand Logo zaldy -->
             <a href="index3.html" class="brand-link bg-purple">
                 <img src="~/FrontEnd/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-                <span class="brand-text font-weight-light">AdminLTE 3</span>
+                <span class="brand-text font-weight-light">ASP MVC Publish to Web Host</span>
             </a>
 
             <!-- Sidebar -->
